# phoniesp32

./: .gitignore  API.md  LICENSE  README.md  flake.nix  justfile
.github/workflows/: build.yml  develop.yml  release.yml
audio-file-utils/: Cargo.toml
audio-file-utils/src/: lib.rs  metadata.rs
case/: PCBCase.FCStd  PrototypeCase.FCStd
cli/: Cargo.toml  justfile
cli/src/: main.rs
cli/src/commands/: transcode.rs
docs/: async-agents-on-bare-metal.md  diy-build.md  pcb-build.md
firmware/: .gitignore  Cargo.toml  build.rs  justfile
firmware/.cargo/: config.toml
firmware/scripts/: stack_size.sh
firmware/src/: captive.rs  charger.rs  controls.rs  lib.rs  mdns.rs  peripherals.rs  player.rs  radio.rs  rfid.rs  sd.rs  spi_bus.rs  web.rs  wifi.rs
firmware/src/controllers/: buttons.rs  mod.rs  network.rs  wifi.rs
firmware/src/controllers/playback/: mod.rs  status.rs
firmware/src/drivers/: audio.rs  charger.rs  control_button.rs  controls.rs  indicator.rs  mod.rs  radio.rs  rfid.rs  sd.rs  spi_wrapper.rs
firmware/src/entities/: audio_file.rs  mod.rs  playlist.rs
firmware/src/player/: control.rs  mod.rs  playback.rs  status.rs
firmware/src/services/: captive.rs  mdns.rs  mod.rs
firmware/src/services/web/: config.rs  files.rs  fob.rs  mod.rs  playback.rs  upload.rs
firmware/src/web/: config.rs  files.rs  fob.rs  mod.rs  playback.rs  tls_socket.rs  upload.rs
firmware/tests/: sd_benchmark.rs  unit_tests.rs
firmware/tests/common/: mod.rs
pcb/PhoniESP32/: .gitignore  I2S.kicad_sch  PhoniESP32.kicad_pcb  PhoniESP32.kicad_prl  PhoniESP32.kicad_pro  PhoniESP32.kicad_sch  Power.kicad_sch  SPI.kicad_sch  fp-lib-table  sym-lib-table
transcoder/: Cargo.toml  justfile
transcoder-test/: Cargo.toml  flake.nix
transcoder-test/src/: main.rs
transcoder-webworker/: Cargo.toml  Makefile  README.md  justfile  worker.js
transcoder-webworker/src/: lib.rs  tests.rs
transcoder/src/: decode.rs  encode.rs  error.rs  lib.rs  normalize.rs  resample.rs  tests.rs
web/: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  justfile
web/assets/: styles.scss
web/src/: main.rs  metadata.rs
web/src/components/: association_table.rs  controls.rs  controls_button.rs  current_playlist.rs  current_song.rs  file_table.rs  last_fob.rs  mod.rs  modal.rs  navbar_burger.rs  notification.rs  playback_controls.rs  toast.rs  upload.rs
web/src/layouts/: layout.rs  mod.rs
web/src/pages/: associations.rs  files.rs  mod.rs  new_association.rs  playback.rs  settings.rs  upload.rs
web/src/services/: config.rs  files.rs  fob.rs  mod.rs  playback.rs  transcoder.rs  utils.rs
wifi-test/: Cargo.toml
wifi-test/src/: lib.rs
wifi-test2/: Cargo.toml
wifi-test2/.cargo/: config.toml
