[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
indicatif = "0.18.4"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
transcoder = { path = "../transcoder" }
audio-file-utils = { path = "../audio-file-utils", features = ["std"] }
