[package]
edition = "2021"
name = "firmware"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-16384",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32"] }
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
trouble-host = { version = "0.4.0", features = [
  "gatt",
  "derive",
  "default-packet-pool-mtu-255",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "alloc",
  "defmt",
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-ipv4",
  "socket-tcp",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
picoserve = { version = "0.16.0", default-features = false, features = [
  "alloc",
  "embassy",
  "defmt",
] }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
aligned = "0.4.2"
sdspi = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", features = [
  "defmt",
] }
block-device-adapters = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes" }
embedded-fatfs = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", default-features = false, features = [
  "defmt",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = [
  "alloc",
] }
heapless = { version = "0.8.0", featues = [
  "alloc",
  "defmt",
  "serde",
  "nightly",
] }
enumset = "1"
mfrc522 = "0.8.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
