[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[build-dependencies]
walkdir = "2.5"
mime_guess = "2.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-ipv4",
  "socket-icmp",
  "socket-tcp",
  "socket-udp",
] }
critical-section = "1.2.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
picoserve = { version = "0.17.1", default-features = false, features = [
  "alloc",
  "embassy",
  "defmt",
  "json",
] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
aligned = "0.4.2"
sdspi = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", features = [
  "defmt",
] }
block-device-adapters = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", features = [
  "defmt",
] }
embedded-fatfs = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", default-features = false, features = [
  "defmt",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = [
  "alloc",
] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
heapless = { version = "0.9.2", features = ["serde", "defmt"] }
enumset = "1"
audio-codec-algorithms = "0.7.0"
embassy-futures = "0.1"
embassy-sync = "0.7.2"
mfrc522 = "0.8.0"
libm = "0.2"
audio-file-utils = { path = "../audio-file-utils" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
