[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[build-dependencies]
walkdir = "2.5"
mime_guess = "2.0"

[dependencies]
audio-file-utils = { path = "../audio-file-utils" }

# ESP32 HAL
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt",
  "esp32c6",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", features = ["defmt"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt-espflash",
  "esp32c6",
] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }

# Embassy
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-futures = "0.1"
embassy-sync = "0.7.2"

# Embedded FAT
sdspi = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", features = [
  "defmt",
] }
block-device-adapters = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", features = [
  "defmt",
] }
embedded-fatfs = { git = "https://github.com/butzist/embedded-fatfs", branch = "fixes", default-features = false, features = [
  "defmt",
] }

# RDID
mfrc522 = "0.8.0"

# Embedded libs
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

# Networking
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-ipv4",
  "socket-icmp",
  "socket-tcp",
  "socket-udp",
] }

picoserve = { git = "https://github.com/sammhicks/picoserve", default-features = false, features = [
  "alloc",
  "embassy",
  "defmt",
  "json",
] }

# mDNS
edge-mdns = { version = "0.6.1", features = ["io"] }
edge-nal = "0.5.0"
edge-nal-embassy = "0.7.0"

# Various
aligned = "0.4.2"
audio-codec-algorithms = "0.7.0"
critical-section = "1.2.0"
defmt = "1.0.1"
enumset = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
heapless = { version = "0.9.2", features = ["serde", "defmt"] }
libm = "0.2"
serde_json = { version = "1.0.145", default-features = false, features = [
  "alloc",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
static_cell = { version = "2.1.1", features = ["nightly"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
