[package]
name = "transcoder-webworker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
js-sys = "*"
futures = "0.3"

transcoder = { path = "../transcoder" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
