[package]
name = "transcoder-webworker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
futures = "0.3.32"

transcoder = { path = "../transcoder" }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
