[package]
name = "transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
symphonia = { version = "0.5.5", features = [
  "aac",
  "flac",
  "vorbis",
  "mp3",
  "wav",
] }
rubato = "0.16.2"
ebur128 = "0.1.10"
audio-codec-algorithms = "0.7.0"
audio-file-utils = { path = "../audio-file-utils", features = ["std"] }
embedded-io-async = "0.7"
base32 = "0.5"
sha1 = "0.10"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
], optional = true }

[features]
tokio-runtime = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "transcoder-test"
path = "src/bin/transcoder-test.rs"
required-features = ["tokio-runtime"]
