[package]
name = "transcoder"
version = "0.1.1"
edition = "2024"

[dependencies]
thiserror = "2"
symphonia = { version = "0.5", features = [
  "aac",
  "flac",
  "vorbis",
  "mp3",
  "wav",
] }
rubato = "1"
audioadapter = "2"
audioadapter-buffers = "2"
ebur128 = "0.1"
audio-codec-algorithms = "0.7"
audio-file-utils = { path = "../audio-file-utils", features = ["std"] }
embedded-io-async = "0.7"
base32 = "0.5"
sha1 = "0.11"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
