[package]
name = "web"
version = "0.1.0"
authors = ["Adam M. Szalkowski <adam@szalkowski.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-free-icons = { git = "https://github.com/dioxus-community/dioxus-free-icons", features = [
  "font-awesome-regular",
  "font-awesome-solid",
] }
web-sys = { version = "*", features = [
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }
wasm-bindgen = "=0.2.104"
async-std = "1.12"
async-lock = "3.4"
web-time = "1.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
audio-file-utils = { path = "../audio-file-utils", features = ["std"] }
heapless = "0.8"
dioxus-bulma = { git = "https://github.com/butzist/dioxus-bulma", branch = "dioxus-0.7", features = [
  "router",
] }
futures = "0.3"
bytes = "1"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
